fix: sdp download button captions now longer overflow on small displays

--- a/sdpdownload/style.less
+++ b/sdpdownload/style.less
@@ -29,6 +29,9 @@
         font-family: @font_family_1;
         font-size: 16px;
     }
+    .btn{
+        white-space:initial;
+    }
     .btn-select {
         color: @color_1;
         background-color: @background_color_1;
